@@ -109,6 +109,10 @@ register void *__thread_pointer asm ("tp");
 # define TLS_INIT_TP(tcbp) \
     (__thread_pointer = (char *)(tcbp) + TLS_TCB_OFFSET, NULL)
 
+/* Value passed to 'clone' for initialization of the thread register.  */
+# define TLS_DEFINE_INIT_TP(tp, pd) \
+  void *tp = (void *) (pd) + TLS_TCB_OFFSET + TLS_PRE_TCB_SIZE
+
 /* Return the address of the dtv for the current thread.  */
 # define THREAD_DTV() \
     (((tcbhead_t *) (__thread_pointer - TLS_TCB_OFFSET))[-1].dtv)
